Update doctor forms

--- a/app/views/renalware/doctors/edit.html.slim
+++ b/app/views/renalware/doctors/edit.html.slim
@@ -1,8 +1,9 @@
-.row
-  h5 Update Doctor
+= render "header"
 
 .row
   .large-8.columns
     = form_for @doctor, as: :doctor, method: :put, url: doctor_path(@doctor) do |f|
       = render partial: 'form', locals: { f: f }
-      = f.submit 'Update', class: 'button save'
+      = f.submit 'Update', class: 'button'
+      span= " or "
+      = link_to "cancel", doctors_path
