Format patient forms

--- a/app/views/renalware/patients/death.html.slim
+++ b/app/views/renalware/patients/death.html.slim
@@ -1,11 +1,10 @@
-.wide-screen
-  h1 Deceased Patients
+= render "header"
 
-.wide-screen
+.row
   table
     thead
       tr
-        th Options
+        th
         th Name
         th NHS No.
         th KCH No.
