--- a/app/views/renalware/modality_reasons/index.html.slim
+++ b/app/views/renalware/modality_reasons/index.html.slim
@@ -36,7 +36,7 @@
       - @reason_pd_hd.each do |mr|
         tr
 
-          %td.g-center data-heading="RR Code"
+          td.g-center data-heading="RR Code"
             = mr.rr_code
-          %td data-heading="PD to Haemodialysis"
+          td data-heading="PD to Haemodialysis"
             = mr.description
