--- a/app/views/renalware/navigation/_renalware_admin.html.slim
+++ b/app/views/renalware/navigation/_renalware_admin.html.slim
@@ -4,18 +4,16 @@ ul.right.large-2.columns
     ul.dropdown
       - if current_user_is_super_admin?
         li
-          = link_to "Manage Event Types", event_types_path
+          = link_to "Event Types", event_types_path
         li
-          = link_to "Manage Drugs", drugs_path
+          = link_to "Drugs", drugs_path
         li
-          = link_to "Manage Modalities", modality_codes_path
+          = link_to "Modalities", modality_codes_path
         li
-          = link_to "Manage Bag Types", bag_types_path
+          = link_to "Bag Types", bag_types_path
         li
-          = link_to "Manage Doctors", doctors_path
+          = link_to "Doctors", doctors_path
 
       - if current_user_is_admin?
         li
-          = link_to 'Approve users', unapproved_admin_users_path
-        li
-          = link_to 'Reactivate users', inactive_admin_users_path
+          = link_to 'Users', admin_users_path
