Simplify main navigation menu
- for now I have pulled the patient menu from the main navigation
- this should be incorporated into the patient menu on the patient screens in the future

--- a/app/views/renalware/events/index.html.slim
+++ b/app/views/renalware/events/index.html.slim
@@ -5,6 +5,8 @@
 
     h2 Patient Events
 
+    p= link_to "Add event", new_patient_event_path(@patient), class: "button"
+
   table
     thead
       th Added
