--- a/app/views/renalware/navigation/_sign_out.html.slim
+++ b/app/views/renalware/navigation/_sign_out.html.slim
@@ -1,4 +1,2 @@
-ul.right.large-2.columns
-  li
-    = link_to 'Log out', destroy_user_session_path, class: 'right button', method: :delete
-
+li
+  = link_to 'Log out', destroy_user_session_path, class: 'right', method: :delete
