--- a/app/views/renalware/patients/_patient_info_header.html.slim
+++ b/app/views/renalware/patients/_patient_info_header.html.slim
@@ -1,6 +1,10 @@
 h4.patient-info
-  = "#{@patient.to_s(:full_name)} - KCH: #{@patient.local_patient_id}, Age: #{@patient.age}, #{I18n.t("enums.gender.#{@patient.sex}")}, DoB: #{@patient.birth_date}, #{@patient.current_modality.blank? || @patient.current_modality.new_record? ? "No Modal" : @patient.current_modality.modality_code.name}"
-
+  = "#{@patient.to_s(:full_name)} - "
+  = "KCH: #{@patient.local_patient_id}, "
+  = "Age: #{@patient.age}, "
+  = "#{I18n.t("enums.gender.#{@patient.sex}")}, "
+  = "DoB: #{@patient.birth_date}, "
+  = "#{@patient.current_modality.blank? || @patient.current_modality.new_record? ? "No Modal" : @patient.current_modality.modality_code.name}"
 nav.sub-nav-container
   dl.sub-nav role="menu"
     dt
