--- a/app/views/renalware/clinic_visits/edit.html.slim
+++ b/app/views/renalware/clinic_visits/edit.html.slim
@@ -1,10 +1,9 @@
-.row
-  h2 Edit Clinic
-
-.row
-  .large-12.columns
+.wide-screen
+  .columns.large-12
+    = render "header"
+  .row
     = form_for [@patient, @clinic_visit],
       url: patient_clinic_visit_path(patient_id: @patient.to_param, id: @clinic_visit.to_param) do |f|
 
       = render partial: 'form', locals: { f: f }
-      = f.submit 'Update', class: 'button save'
+      = f.submit 'Update', class: 'button'
