No need to be so dramatic

--- a/app/views/renalware/navigation/_patient_search.html.slim
+++ b/app/views/renalware/navigation/_patient_search.html.slim
@@ -9,5 +9,5 @@
                 id: 'patient_search_input',
                 placeholder: "Name, Hosp No or NHS No"
           .large-4.small-3.columns
-            = f.submit "Find!", title: "Find Patient", class: "nav-search button tiny"
+            = f.submit "Find", title: "Find Patient", class: "nav-search button tiny"
 
