--- a/app/views/renalware/patients/_patient_sub_nav.html.slim
+++ b/app/views/renalware/patients/_patient_sub_nav.html.slim
@@ -9,4 +9,4 @@ nav class="top-bar patient-nav" data-topbar="" role="navigation"
       li= link_to "Events (#{@patient.events.length})", patient_events_path(@patient), title: "Patient Events"
       li= link_to "Clinic Visits (#{@patient.clinic_visits.length})", patient_clinic_visits_path(@patient), title: "Clinic Visits"
       li= link_to "Letters (#{@patient.letters.length})", patient_letters_path(@patient), title: "Letters"
-      li= link_to "Recipient Workups", patient_transplants_recipient_workups_path(@patient), title: "Recipient Workups"
+      li= link_to "Recipient Workup", patient_transplants_recipient_workup_path(@patient), title: "Recipient Workups"
