--- a/app/views/renalware/transplants/recipient_workups/_header.html.slim
+++ b/app/views/renalware/transplants/recipient_workups/_header.html.slim
@@ -1,7 +1,3 @@
 = render partial: "renalware/patients/patient_info_header", locals: { model: @patient }
 = render partial: "renalware/patients/mini_renal_profile", locals: { model: @patient }
-h2 Recipient Workups
-
-dl.sub-nav
-  dd= link_to 'List', patient_transplants_recipient_workups_path(@patient)
-  dd= link_to 'Add workup', new_patient_transplants_recipient_workup_path(@patient)
+h2 Recipient Workup
