--- a/app/views/renalware/transplants/recipient_workups/edit.html.slim
+++ b/app/views/renalware/transplants/recipient_workups/edit.html.slim
@@ -1,6 +1,8 @@
 .row
-  .large-12.columns
-    h3.right Edit Recipient Workup
+  .columns.large-12
+    = render "header"
 
-  = simple_form_for @workup, url: patient_transplants_recipient_workup_path(@patient, @workup), method: :put do |f|
-    = render 'form', f: f
+.row
+  .columns.large-12
+    = simple_form_for @workup, url: patient_transplants_recipient_workup_path(@patient), method: :put do |f|
+      = render 'form', f: f
