--- a/app/views/renalware/transplants/recipient_workups/_form.html.slim
+++ b/app/views/renalware/transplants/recipient_workups/_form.html.slim
@@ -83,16 +83,6 @@ ruby:
                 = fd.input :heart_sounds
 
           fieldset
-            legend Consent
-            .row
-              .medium-6.columns
-                = fd.input :tx_consent, as: :boolean
-                = fd.input :tx_consent_date, as: :date, include_blank: true
-              .medium-6.columns
-                = fd.input :tx_consent_marginal, as: :boolean
-                = fd.input :tx_consent_marginal_date, as: :date, include_blank: true
-
-          fieldset
             legend Transplant Education
             .row
               .medium-6.columns
@@ -103,6 +93,18 @@ ruby:
                 - %i(educ_drugs_shortterm educ_drugs_longterm educ_cancer educ_followup educ_recurrence).each do |attribute|
                   .row
                     = yes_no_radio_buttons(fd, attribute)
+
+          fieldset
+            legend Consent
+            .row
+              .medium-6.columns
+                = fd.input :tx_consent, as: :select, collection: titleize_enum(%w(full partial refused))
+                = fd.input :tx_consenting_name
+                = fd.input :tx_consent_date, as: :date, include_blank: true
+              .medium-6.columns
+                = yes_no_radio_buttons(fd, :tx_marginal_consent)
+                = fd.input :tx_marginal_consenting_name
+                = fd.input :tx_marginal_consent_date, as: :date, include_blank: true
 
       = fd.input :hla_data, as: :text, input_html: { rows: 3 }
 
