--- a/app/views/renalware/patients/_record_header.html.slim
+++ b/app/views/renalware/patients/_record_header.html.slim
@@ -4,5 +4,5 @@
 h2 Demographics
 
 dl.sub-nav
-  dd= link_to "View", demographics_patient_path(@patient)
+  dd= link_to "View", patient_path(@patient)
   dd= link_to "Edit", edit_patient_path(@patient)
