--- a/app/views/renalware/patients/_patient.html.slim
+++ b/app/views/renalware/patients/_patient.html.slim
@@ -1,5 +1,5 @@
 tr
-  td= link_to 'Demographics', demographics_patient_path(patient), title: 'Demographics'
+  td= link_to "Demographics", patient_path(patient), title: "Demographics"
   td= patient.to_s(:last_first)
   td= patient.nhs_number
   td= patient.local_patient_id
