--- a/app/views/renalware/patients/edit.html.slim
+++ b/app/views/renalware/patients/edit.html.slim
@@ -7,11 +7,11 @@
 
     = form_for @patient, method: :put do |f|
 
-      = hidden_field_tag :redirect_url, demographics_patient_path(@patient)
+      = hidden_field_tag :redirect_url, patient_path(@patient)
       = hidden_field_tag :message, "You have successfully updated a patient's demographics"
 
       = render partial: "renalware/patients/demographic_form", locals: { patient: f }
 
       = submit_tag "Update", class: "button"
       span= " or "
-      = link_to "Cancel", demographics_patient_path(@patient)
+      = link_to "Cancel", patient_path(@patient)
