Extract ESRF into own resource/controller
No need to couple this to the patient controller.

--- a/app/views/renalware/patients/_mini_renal_profile.html.slim
+++ b/app/views/renalware/patients/_mini_renal_profile.html.slim
@@ -1,5 +1,5 @@
 .renal-profile
-  = link_to "ESRF", esrf_info_patient_path(@patient)
+  = link_to "ESRF", edit_patient_esrf_path(@patient)
   = " "
   = display_prd_date(@patient)
   = " "
