--- a/app/views/renalware/esrf/edit.html.slim
+++ b/app/views/renalware/esrf/edit.html.slim
@@ -7,14 +7,8 @@
 
 .row
   ul.no-bullet
-    = form_for @patient do |f|
-
-      = hidden_field_tag :redirect_url, patient_clinical_summary_path(@patient)
-
-      = f.fields_for :esrf, @esrf do |esrf|
-
-        = render partial: 'renalware/patients/esrf_form', locals: { esrf: esrf }
-
+    = form_for @esrf, url: patient_esrf_path(@patient), method: :patch do |f|
+      = render partial: "form", locals: { f: f }
       = f.submit "Save ESRF Summary", class: "button tiny right save mt"
 
   = link_to "Cancel", patient_clinical_summary_path(@patient), class: "button tiny left cancel mt"
