--- a/app/views/renalware/patients/_mini_renal_profile.html.slim
+++ b/app/views/renalware/patients/_mini_renal_profile.html.slim
@@ -1,7 +1,7 @@
 .renal-profile
   = link_to "ESRF", edit_patient_esrf_path(@patient)
   = " "
-  = display_prd_date(@patient)
+  = display_prd_diagnosed_on(@patient)
   = " "
   = display_prd(@patient)
 
