Remove complicated helper
When models have a custom string representation we can avoid helpers
like this.

--- a/app/views/renalware/patients/_mini_renal_profile.html.slim
+++ b/app/views/renalware/patients/_mini_renal_profile.html.slim
@@ -1,9 +1,7 @@
 .renal-profile
   = link_to "ESRF", edit_patient_esrf_path(@patient)
   = " "
-  = display_prd_diagnosed_on(@patient)
-  = " "
-  = display_prd(@patient)
+  = @patient.esrf
 
   br
   - if display_pd_menu(@patient.modalities.with_deleted)
