--- a/app/views/renalware/esrf/_form.html.slim
+++ b/app/views/renalware/esrf/_form.html.slim
@@ -3,10 +3,10 @@
     as: :date, start_year: (1.years.ago).year,
     end_year: (Time.now.year + 1), order: [:day, :month, :year],
     include_blank: true,
-    label: "Date", input_html: {class: "datetime"}
+    input_html: {class: "datetime"}
 
   = f.association :prd_code,
-    collection: Renalware::PrdCode.all, prompt: "Please select primary renal diagnosis",
+    collection: Renalware::PrdCode.all, prompt: t(".prd_prompt"),
     include_blank: true,
     label_method: :term,
-    label: "Primary Renal Diagnosis (PRD)", input_html:  {class: "prd-select"}
+    input_html:  {class: "prd-select"}
