--- a/app/views/renalware/transplants/recipient_workups/_form.html.slim
+++ b/app/views/renalware/transplants/recipient_workups/_form.html.slim
@@ -98,7 +98,8 @@ ruby:
             legend Consent
             .row
               .medium-6.columns
-                = fd.input :tx_consent, as: :select, collection: titleize_enum(%w(full partial refused))
+                = fd.input :tx_consent, as: :select,
+                  collection: fd.object.class.tx_consent.options
               .medium-6.columns
                 = fd.input :tx_consent_date, as: :date, include_blank: true
                 = fd.input :tx_consenting_name
