--- a/app/views/renalware/transplants/recipient_workups/_header.html.slim
+++ b/app/views/renalware/transplants/recipient_workups/_header.html.slim
@@ -1,3 +1,3 @@
-= render partial: "renalware/patients/patient_info_header", locals: { model: @patient }
-= render partial: "renalware/patients/mini_renal_profile", locals: { model: @patient }
+= render "renalware/patients/patient_info_header", model: @patient
+= render "renalware/patients/mini_renal_profile", model: @patient
 h2 Recipient Workup
