--- a/app/views/renalware/transplants/recipient_workups/edit.html.slim
+++ b/app/views/renalware/transplants/recipient_workups/edit.html.slim
@@ -4,5 +4,7 @@
 
 .row
   .columns.large-12
-    = simple_form_for @workup, url: patient_transplants_recipient_workup_path(@patient), method: :put do |f|
+    = simple_form_for @workup,
+      url: patient_transplants_recipient_workup_path(@patient),
+      method: :patch do |f|
       = render 'form', f: f
