--- a/app/views/renalware/pd_summaries/show.html.slim
+++ b/app/views/renalware/pd_summaries/show.html.slim
@@ -14,21 +14,14 @@
 .wide-screen
   = render partial: 'renalware/pd_regimes/current_regime' unless @current_regime.nil?
 
-  h6
-    = "CAPD Regimes (#{@capd_regimes.length})"
+  h6= "CAPD Regimes (#{@capd_regimes.length})"
   = render partial: 'renalware/patients/capd_regimes'
 
-  h6
-    = "APD Regimes (#{@apd_regimes.length})"
-  /! = render partial: 'renalware/pd_regimes/current_regime' unless @current_regime.nil?
+  h6= "APD Regimes (#{@apd_regimes.length})"
   = render partial: 'renalware/patients/apd_regimes'
 
-  h6
-    = "Peritonitis Episodes (#{@peritonitis_episodes.length})"
-
+  h6= "Peritonitis Episodes (#{@peritonitis_episodes.length})"
   = render partial: "renalware/patients/peritonitis_episodes"
 
-  h6
-    = "Exit Site Infections (#{@exit_site_infections.length})"
-
+  h6= "Exit Site Infections (#{@exit_site_infections.length})"
   = render partial: "renalware/patients/exit_site_infections"
