--- a/app/views/renalware/pd_summaries/show.html.slim
+++ b/app/views/renalware/pd_summaries/show.html.slim
@@ -7,7 +7,7 @@
 
     p
       = link_to "Add CAPD Regime", new_patient_pd_regime_path(@patient, type: 'CAPDRegime'), class: "button tiny"
-      = link_to "Add APD Regime", new_patient_pd_regime_path(@patient, type: 'ApdRegime'), class: "button tiny"
+      = link_to "Add APD Regime", new_patient_pd_regime_path(@patient, type: 'APDRegime'), class: "button tiny"
       = link_to "Add Peritonitis Episode", new_patient_peritonitis_episode_path(@patient), class: "button tiny"
       = link_to "Add Exit Site Infection", new_patient_exit_site_infection_path(@patient), class: "button tiny"
 
