--- a/app/views/renalware/transplants/recipient_workups/_form.html.slim
+++ b/app/views/renalware/transplants/recipient_workups/_form.html.slim
@@ -8,9 +8,9 @@ ruby:
 
 .row.top
   .medium-6.columns
-    = f.submit 'Save', class: 'button save'
+    = f.submit "Save", class: "button save"
     span= " or "
-    = link_to 'cancel', back_path
+    = link_to "cancel", back_path
 - if f.object.persisted?
   .medium-3.columns
     dl
@@ -24,92 +24,92 @@ ruby:
 
 .row
   .medium-12.columns
-    = f.fields_for :document do |fd|
+    = f.fields_for :document, f.object.document do |fd|
       .row
         .medium-6.columns
           fieldset
-            legend Co-morbidities / Historical
-            - %i(angina myocardial_infarct coronary_artery_bypass_graft heart_failure smoking chronic_obstr_pulm_dis cvd_or_stroke diabetes malignancy liver_disease claudication ischaemic_neuropathic_ulcers non_coronary_angioplasty amputation_for_pvd).each do |attribute|
+            legend Co-morbidities
+            = fd.simple_fields_for :comorbidities, fd.object.comorbidities do |fcm|
+              - fcm.object.class.attributes_list.each do |attribute|
+                = render "dated_confirmation_field", attribute: attribute, f: fcm
+
+          fieldset
+            legend Historical
+            = fd.simple_fields_for :historicals, fd.object.historicals do |fcm|
+              = enum_radio_buttons(fcm, :tb)
+              = enum_radio_buttons(fcm, :dvt)
+              = enum_radio_buttons(fcm, :reflux)
+              = enum_radio_buttons(fcm, :neurogenic_bladder)
+              = enum_radio_buttons(fcm, :recurrent_utis)
+              = enum_radio_buttons(fcm, :family_diabetes)
+
               .row
                 .medium-6.columns
-                  = yes_no_radio_buttons(fd, attribute)
-                .medium-6.columns
-                  = fd.input "#{attribute}_date".to_sym, as: :date, include_blank: true, label: false
-
-            = yes_no_radio_buttons(fd, :hx_tb)
-            = yes_no_radio_buttons(fd, :hx_dvt)
-            = yes_no_radio_buttons(fd, :hx_reflux)
-            = yes_no_radio_buttons(fd, :hx_neurogenic_bladder)
-            = yes_no_radio_buttons(fd, :hx_recurrent_utis)
-            = yes_no_radio_buttons(fd, :hx_family_diabetes)
-
-            .row
-              .medium-6.columns
-                = fd.input :pregnancies_count, collection: (0..9).to_a
+                  = fcm.input :pregnancies_count, collection: (0..9).to_a
 
         .medium-6.columns
 
           fieldset
             legend Scores
-            .row
-              .medium-6.columns
-                = fd.input :karnofsky_score
-              .medium-6.columns
-                = fd.input :prisma_score
+            = fd.simple_fields_for :scores, fd.object.scores do |fcm|
+              .row
+                .medium-6.columns
+                  = fcm.input :karnofsky
+                .medium-6.columns
+                  = fcm.input :prisma
 
           fieldset
             legend Cervical smear data (latest and historical)
-            .row
-              .medium-6.columns
-                = fd.input :cervical_result
-              .medium-6.columns
-                = fd.input :cervical_date, as: :date, include_blank: true
+            = fd.simple_fields_for :cervical_smear, fd.object.cervical_smear do |fcm|
+              .row
+                .medium-6.columns
+                  = fcm.input :result
+                .medium-6.columns
+                  = fcm.input :date, as: :date, include_blank: true
 
           fieldset
             legend Examination
-            .row
-              .medium-6.columns
-                = yes_no_radio_buttons(fd, :femoral_pulse_r)
-                = yes_no_radio_buttons(fd, :femoral_pulse_l)
-                = yes_no_radio_buttons(fd, :dorsalis_pedis_pulse_r)
-                = yes_no_radio_buttons(fd, :dorsalis_pedis_pulse_l)
-                = yes_no_radio_buttons(fd, :posterior_tibial_pulse_r)
-                = yes_no_radio_buttons(fd, :posterior_tibial_pulse_l)
-              .medium-6.columns
-                = yes_no_radio_buttons(fd, :carotid_bruit_l)
-                = yes_no_radio_buttons(fd, :carotid_bruit_r)
-                = yes_no_radio_buttons(fd, :femoral_bruit_l)
-                = yes_no_radio_buttons(fd, :femoral_bruit_r)
-                = fd.input :heart_sounds
+            = fd.simple_fields_for :examination, fd.object.examination do |fcm|
+              table
+                thead
+                  tr
+                    th
+                    th Left
+                    th Right
+                tbody
+                  = render "left_right_confirmation_fields", attribute: :femoral_pulse, f: fcm
+                  = render "left_right_confirmation_fields", attribute: :dorsalis_pedis_pulse, f: fcm
+                  = render "left_right_confirmation_fields", attribute: :posterior_tibial_pulse, f: fcm
+                  = render "left_right_confirmation_fields", attribute: :carotid_bruit, f: fcm
+                  = render "left_right_confirmation_fields", attribute: :femoral_bruit, f: fcm
+              = fcm.input :heart_sounds
 
           fieldset
             legend Transplant Education
-            .row
-              .medium-6.columns
-                - %i(educ_waiting_list educ_transport_benefits educ_procedure educ_infection educ_rejection educ_success_rate ).each do |attribute|
-                  .row
-                    = yes_no_radio_buttons(fd, attribute)
-              .medium-6.columns
-                - %i(educ_drugs_shortterm educ_drugs_longterm educ_cancer educ_followup educ_recurrence).each do |attribute|
-                  .row
-                    = yes_no_radio_buttons(fd, attribute)
+            = fd.simple_fields_for :education, fd.object.education do |fcm|
+              .row
+                - fcm.object.class.attributes_list.in_groups(2, false).each do |group|
+                  .medium-6.columns
+                    - group.each do |attribute|
+                      = enum_radio_buttons(fcm, attribute)
 
           fieldset
             legend Consent
-            .row
-              .medium-6.columns
-                = fd.input :tx_consent, as: :select,
-                  collection: fd.object.class.tx_consent.options
-              .medium-6.columns
-                = fd.input :tx_consent_date, as: :date, include_blank: true
-                = fd.input :tx_consenting_name
-            hr
-            .row
-              .medium-6.columns
-                = yes_no_radio_buttons(fd, :tx_marginal_consent)
-              .medium-6.columns
-                = fd.input :tx_marginal_consent_date, as: :date, include_blank: true
-                = fd.input :tx_marginal_consenting_name
+            = fd.simple_fields_for :transplant_consents, fd.object.transplant_consents do |fcm|
+              .row
+                .medium-6.columns
+                  = fcm.input :consent, as: :select,
+                    collection: fcm.object.class.consent.options
+                .medium-6.columns
+                  = fcm.input :consent_date, as: :date, include_blank: true
+              .row
+                .medium-12.columns
+                  = fcm.input :consenting_name
+              hr
+              = render "dated_confirmation_field", attribute: :marginal_consent, f: fcm
+              .row
+                .medium-12.columns
+                  = fcm.input :marginal_consenting_name
 
       = fd.input :hla_data, as: :text, input_html: { rows: 3 }
 
