Clarify menu item and header

--- a/app/views/renalware/navigation/_renalware_admin.html.slim
+++ b/app/views/renalware/navigation/_renalware_admin.html.slim
@@ -9,7 +9,7 @@ li.has-dropdown
       li
         = link_to "Modalities", modality_codes_path
       li
-        = link_to "Bag Types", bag_types_path
+        = link_to "PD Bags", bag_types_path
       li
         = link_to "Doctors", doctors_path
 
