Short table labels
This helps with readability and not sure how much value
'content' was adding to the table headers

--- a/app/views/renalware/bag_types/index.html.slim
+++ b/app/views/renalware/bag_types/index.html.slim
@@ -8,16 +8,16 @@
           th
           th Manufacturer
           th Description
-          th Glucose content (g/l)
+          th Glucose (g/l)
           th Amino acid
           th Icodextrin
           th Low GDP
           th Low Na
-          th Sodium content (mmole/l)
-          th Lactate content (mmole/l)
-          th Bicarbonate content (mmole/l)
-          th Calcium content (mmole/l)
-          th Magnesium content (mmole/l)
+          th Sodium (mmole/l)
+          th Lactate (mmole/l)
+          th Bicarbonate (mmole/l)
+          th Calcium (mmole/l)
+          th Magnesium (mmole/l)
 
       tbody
         - @bag_types.each do |bt|
