Update route to follow naming conventions

--- a/app/views/renalware/exit_site_infections/show.html.slim
+++ b/app/views/renalware/exit_site_infections/show.html.slim
@@ -52,4 +52,4 @@
       .large-12.columns.button-padding
         = link_to "Edit", edit_patient_exit_site_infection_path(@patient, @exit_site_infection.id), class: "tiny button right"
 
-        = link_to "Return to PD Info", pd_info_patient_path(@patient), class: "button tiny left cancel"
+        = link_to "Return to PD Info", patient_pd_summary_path(@patient), class: "button tiny left cancel"
