--- a/app/views/renalware/pd_regimes/show.html.slim
+++ b/app/views/renalware/pd_regimes/show.html.slim
@@ -70,4 +70,4 @@
 
     .large-12.columns.button-padding
       = link_to "Edit", edit_patient_pd_regime_path(@patient, @pd_regime.id), class: "tiny button right"
-      = link_to "Back", pd_info_patient_path(@patient), class: "button tiny left cancel"
+      = link_to "Back", patient_pd_summary_path(@patient), class: "button tiny left cancel"
