--- a/app/views/renalware/exit_site_infections/new.html.slim
+++ b/app/views/renalware/exit_site_infections/new.html.slim
@@ -20,5 +20,5 @@
           = render partial: 'renalware/exit_site_infections/form', locals: { es: es }
 
         .row.button-padding
-          = link_to "Cancel", pd_info_patient_path(@patient), class: "button tiny left cancel mt"
+          = link_to "Cancel", patient_pd_summary_path(@patient), class: "button tiny left cancel mt"
           = es.submit "Save Exit Site Infection", class: "button tiny right save mt"
