--- a/app/views/renalware/peritonitis_episodes/new.html.slim
+++ b/app/views/renalware/peritonitis_episodes/new.html.slim
@@ -20,5 +20,5 @@
           = render partial: 'renalware/peritonitis_episodes/form', locals: { pe: pe }
 
         .row.button-padding
-          = link_to "Cancel", pd_info_patient_path(@patient), class: "button tiny left cancel mt"
+          = link_to "Cancel", patient_pd_summary_path(@patient), class: "button tiny left cancel mt"
           = pe.submit "Save Peritonitis Episode", class: "button tiny right save mt"
