--- a/app/views/renalware/peritonitis_episodes/show.html.slim
+++ b/app/views/renalware/peritonitis_episodes/show.html.slim
@@ -96,4 +96,4 @@
 
       .large-12.columns.button-padding
         = link_to "Edit", edit_patient_peritonitis_episode_path(@patient, @peritonitis_episode.id), class: "tiny button right"
-        = link_to "Return to PD Info", pd_info_patient_path(@patient), class: "button tiny left cancel"
+        = link_to "Return to PD Info", patient_pd_summary_path(@patient), class: "button tiny left cancel"
